libs/wingc/src/lsp/snapshots/hovers/inside_inflight_test.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\na: num\n```\n---\n```wing\nnum\n```"
range:
  start:
    line: 2
    character: 7
  end:
    line: 2
    character: 8

