libs/wingc/src/lsp/snapshots/hovers/json_element_nested_inner.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\ninner: [num, num, num]\n```"
range:
  start:
    line: 1
    character: 8
  end:
    line: 1
    character: 13

