libs/wingc/src/lsp/snapshots/hovers/just_variable.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nmyString: str\n```\n---"
range:
  start:
    line: 1
    character: 4
  end:
    line: 1
    character: 12

