libs/wingc/src/lsp/snapshots/hovers/map_element.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nhi: str\n```"
range:
  start:
    line: 1
    character: 2
  end:
    line: 1
    character: 6

