libs/wingc/src/lsp/snapshots/hovers/member_doc_on_same_line_as_something_else.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight field: num\n```\n---\nMember doc in unexpected place"
range:
  start:
    line: 2
    character: 4
  end:
    line: 2
    character: 9

