libs/wingc/src/lsp/snapshots/hovers/new_expression_nested.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "Module `cloud`"
range:
  start:
    line: 2
    character: 4
  end:
    line: 2
    character: 9

